// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeagleErrorComponent - empty should match snapshot 1`] = `
<beagle-error
  errors={[Function Array]}
  retry={[Function Function]}
  showingDetails="false"
>
  <beagle-text
    text="Sorry!"
    textcolor="red"
  >
    <p
      class="beagle-text"
      style="color: red; text-align: inherit;"
    >
      Sorry!
    </p>
  </beagle-text><beagle-text
    text="An unexpected error happened while loading your page."
  >
    <p
      class="beagle-text"
      style="text-align: inherit;"
    >
      An unexpected error happened while loading your page.
    </p>
  </beagle-text><button
    class="retry-button"
    type="button"
  >
    Retry
  </button>
</beagle-error>
`;

exports[`BeagleErrorComponent - with errors should match snapshot 1`] = `
<beagle-error
  errors={[Function Array]}
  retry={[Function Function]}
  showingDetails="false"
>
  <beagle-text
    text="Sorry!"
    textcolor="red"
  >
    <p
      class="beagle-text"
      style="color: red; text-align: inherit;"
    >
      Sorry!
    </p>
  </beagle-text><beagle-text
    text="An unexpected error happened while loading your page."
  >
    <p
      class="beagle-text"
      style="text-align: inherit;"
    >
      An unexpected error happened while loading your page.
    </p>
  </beagle-text><button
    class="retry-button"
    type="button"
  >
    Retry
  </button><button
    class="show-details-button"
    type="button"
  >
     Show details ▼ 
  </button><section
    class="errors-detailed-container"
  >
    
    <p
      class="error-message"
    >
      <span
        class="error-indicator"
      >
        ►
      </span>
       ERROR: First Message 
    </p>
    <p
      class="error-message"
    >
      <span
        class="error-indicator"
      >
        ►
      </span>
       ERROR: Second Message 
    </p>
  </section>
</beagle-error>
`;
